# dht

./: .actrc  .coverage  .coverage.Mac-mini-di-Emanuele.local.862.XpyImlkx  .coverage.Mac-mini-di-Emanuele.local.869.XMFTlXXx  .coverage.Mac-mini-di-Emanuele.local.880.XAsoWxgx  .coverage.Mac-mini-di-Emanuele.local.892.XoTMIivx  .coverage.Mac-mini-di-Emanuele.local.897.XEqpLhPx  .coverage.Mac-mini-di-Emanuele.local.902.XAtAfBCx  .coverage.Mac-mini-di-Emanuele.local.902.XfzeVytx  .coverage.Mac-mini-di-Emanuele.local.937.XDHJGOLx  .dht_environment_report.json  .dhtconfig.example  .dockerignore  .fix_all_mypy_errors.py.bak  .fix_mypy_errors.py.bak  .fix_remaining_mypy_errors.py.bak  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config-sequential.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .pre-commit-sequential.sh  .trufflehog-exclude  .yamlfmt  .yamlfmt-general  .yamllint.yml  AUTHORS.md  AVOID_TOKEN_LIMITS.md  BASH_TO_PYTHON_MIGRATION.md  BoltComparison.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  F541_fixes_summary.md  LICENSE  (+57 more)
.devcontainer/: devcontainer.json
.dht/: guardian_results.yaml
.github/scripts/: install-gitleaks-safe.sh  verify-no-overwrite.sh
.github/workflows/: ci.yml  dependency-review.yml  dht-release.yml  dht-tests.yml  docker-tests.yml  lint.yml  pre-commit-sequential.yml  security-scan.yml  super-linter.yml
.pre-commit-wrappers/: memory-limited-hook.sh  trufflehog-limited.sh
DOCS_DEV/uv_docs/: index.md
DOCS_DEV/uv_docs/reference/: cli.md  environment.md  settings.md
docs/: BUILD.md  DHTL_TEST_COVERAGE.md  DOCKER.md  DOCKER_PROFILES.md  WORKFLOW_STATUS.md  prefect_test_improvements.md  subprocess_migration_guide.md  tree-sitter-usage.md  workspace-commands.md
examples/workspace-demo/: README.md  demo_root.py  pyproject.toml  run_demo.sh  test_demo.py
examples/workspace-demo/apps/cli/: pyproject.toml
examples/workspace-demo/apps/cli-tool/: pyproject.toml
examples/workspace-demo/apps/cli-tool/cli_tool/: __init__.py
examples/workspace-demo/apps/cli/cli/: __init__.py  main.py
examples/workspace-demo/apps/web/: pyproject.toml
examples/workspace-demo/apps/web-app/: pyproject.toml
examples/workspace-demo/apps/web-app/web_app/: __init__.py
examples/workspace-demo/apps/web/web/: __init__.py  app.py
requirements/: common-constraints.txt  requirements-browser.txt  requirements-dev.txt  requirements-help.in  requirements-help.txt  requirements.in  tree-sitter.in
scripts/: build.sh  docker-setup.sh
src/: sitecustomize.py
src/DHT/: .dht_environment_report.json  ACT_INTEGRATION_GUIDE.md  ACT_VS_ACTIONLINT.md  ATOMIC_INFORMATION_STRUCTURE.md  CONCRETE_IMPLEMENTATION_STEPS.md  DEPLOY_CONTAINER_DESIGN.md  DETERMINISTIC_BUILD_RATIONALE.md  DHT_ARCHITECTURE.md  DHT_COMMANDS.md  DHT_REGENERATION_PLAN.md  EDGE_CASES_SOLUTIONS.md  IMPLEMENTATION_EXAMPLES.md  IMPLEMENTATION_MILESTONE_1.md  PLATFORM_NORMALIZATION_GUIDE.md  PREFECT_MIGRATION_PLAN.md  README.md  REGENERATION_KEY_INNOVATIONS.md  SETUP_REGENERATION_TECHNICAL_PLAN.md  UV_APP_VS_LIB.md  UV_INTEGRATION.md  UV_INTEGRATION_STRATEGY.md  UV_TOOL_MANAGEMENT.md  __init__.py  colors.py  constants_core.py  custom.json  dhtl.py  diagnostic_parser_utils.py  diagnostic_reporter.py  diagnostic_reporter_old.py  diagnostic_reporter_v2.py  diagnostic_system_info.py  diagnostic_tool_collector.py  ensure_env.py  ensure_env.sh  launcher.py  setup_tree_sitter.py  tasks_checklist.md  test_results_current_status.md  test_results_final.md  (+1 more)
src/DHT/GITHUB_WORKFLOWS/: README.md  check_pypi_version.yml  docker-build-test.yml  docker-build-test.yml.bak  docker-release.yml  issues.yml  pages.yml  pre-commit.yml  release.yml  ubuntu-tests.yml  windows-tests.yml  windows_check_pypi_version.yml
src/DHT/docker/: Dockerfile  Dockerfile.jekyll
test_temp/: pyproject.toml
test_upgrade/: pyproject.toml
tests/: __init__.py  conftest.py  conftest_compact.py  conftest_prefect.py  helpers.py  pytest.ini  pytest_summary.py  test_bash_parser.py  test_dhtl_basic.py  test_dhtl_basic.sh  test_dhtl_cli.py  test_dhtl_commands_python.py  test_dhtl_python.py  test_prefect_compat.py  test_project_generator_flow.py  test_workspace_commands.py  test_workspace_functionality.py
tests/docker/: test_all_dhtl_actions.py  test_dhtl_commands_complete.py  test_docker_profiles.py  test_workflow_profiles.py
tests/integration/: comprehensive_test_summary.md  test_bolt_commands_integration.py  test_bolt_commands_simple.py  test_bolt_core_commands.py  test_command_test.py  test_dhtl_build_command.py  test_dhtl_commands.py  test_dhtl_deploy_container.py  test_dhtl_init_command.py  test_dhtl_init_simple.py  test_dhtl_setup_command.py  test_dhtl_setup_init.py  test_dhtl_sync_command.py  test_github_clone_setup.py  test_github_repos_workflow.py  test_real_workflow.py  test_uv_manager_integration.py  test_workspace_commands_integration.py
tests/samples/: pip_inspect.json
tests/unit/: TEST_CLI_COMMANDS_REGISTRY_SUMMARY.md  migration_guide.md  test_bash_efficiency.py  test_bash_parser.py  test_bolt_compatibility.py  test_cli_commands_registry.py  test_comprehensive_verification.py  test_core_presence.py  test_critical_fixes.py  test_dht_flows.py  test_dhtconfig.py  test_dhtl_commands.py  test_dhtl_diagnostics.py  test_dhtl_guardian_command.py  test_django_detection_fix.py  test_docker.py  test_docker_components.py  test_docker_coverage.py  test_docker_final_coverage.py  test_duplicate_functions.py  test_environment.py  test_environment_configurator.py  test_environment_reproducer.py  test_error_handling.py  test_example_usage.py  test_guardian_command.py  test_helpers.py  test_init_command.py  test_package_parsers.py  test_prefect_harness_fix.py  test_project_analyzer.py  test_project_heuristics.py  test_project_type_detector.py  test_python_efficiency.py  test_python_migration_completeness.py  test_shell_architecture.py  test_subprocess_utils.py  test_system_taxonomy.py  test_system_taxonomy_summary.md  test_template_files.py  (+5 more)
(+223 files in other folders)
