[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dht-toolkit"
version = "1.0.0"
description = "Development Helper Toolkit - A universal development automation tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DHT Contributors", email = "dht@example.com"},
]
maintainers = [
    {name = "DHT Contributors", email = "dht@example.com"},
]
keywords = ["development", "automation", "devops", "toolkit", "cli", "build-tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dependencies = [
    # Core dependencies
    "click>=8.1.0",
    "rich>=13.0.0",
    "prefect>=2.14.0",
    "prefect-shell>=0.2.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
    # UV package manager
    "uv>=0.5.0",
    # Tree-sitter for parsing
    "tree-sitter>=0.24.0",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-language-pack>=0.7.0",
    "tree-sitter-yaml>=0.7.0",
    # Utilities
    "tabulate>=0.9.0",
    "pathspec>=0.12.0",
    "packaging>=24.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "typing-extensions>=4.0.0",
    "pexpect>=4.9.0",
    "psutil>=7.0.0",
    "bump-my-version>=1.1.0",
    "tomli-w>=1.2.0",
    # Additional dependencies found by deptry
    "colorama>=0.4.6",
    "distro>=1.9.0",
    "jsonschema>=4.23.0",
    "toml>=0.10.2",
    "pydantic>=2.10.0",
    "jinja2>=3.1.0",
    "docker>=7.1.0",
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dht"
Documentation = "https://github.com/yourusername/dht/wiki"
Repository = "https://github.com/yourusername/dht.git"
Issues = "https://github.com/yourusername/dht/issues"
Changelog = "https://github.com/yourusername/dht/blob/main/CHANGELOG.md"

[project.scripts]
dhtl = "DHT.dhtl:main"
dht = "DHT.dhtl:main"

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "google-generativeai>=0.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]
lint = [
    "mypy>=1.0.0",
    "ruff>=0.11.0",
    "flake8>=7.0.0",
]
all = [
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "google-generativeai>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "mypy>=1.0.0",
    "ruff>=0.11.0",
    "flake8>=7.0.0",
]


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "tree-sitter-bash",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "C90"]
ignore = ["E501", "W505", "F841", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tree-sitter-bash",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | build
  | dist
  | tree-sitter-bash
)/
'''

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/tree-sitter-bash/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/DHT"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
]

[tool.deptry]
extend_exclude = [
    "tests",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "node_modules",
    ".DS_Store",
    "tree-sitter-bash",
]
ignore = ["DEP001", "DEP002", "DEP003"]  # Ignore missing imports, unused deps, transitive deps

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pytest", "pytest-asyncio", "mypy", "ruff", "flake8", "black", "pre-commit", "deptry",
    "openai", "litellm", "google-generativeai", "bump-my-version", "uv",
    "prefect-shell", "tree-sitter-language-pack", "tree-sitter-yaml",
    "tabulate", "pathspec", "typing-extensions"
]

[tool.deptry.package_module_name_map]
gitpython = "git"
pyyaml = "yaml"
tree-sitter-languages = "tree_sitter_languages"
tree-sitter-bash = "tree_sitter_bash"
bump-my-version = "bumpversion"
