[project]
name = "workspace-demo"
version = "0.1.0"
description = "Example DHT workspace demonstrating Bolt-like functionality"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]
exclude = [
    "packages/deprecated",
]

[project.scripts]
build = "echo 'Building root project...'"
test = "echo 'Testing root project...'"
lint = "echo 'Linting root project...'"
