[project]
name = "cli-tool"
version = "0.1.0"
description = "Command line tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
test = "echo 'Testing cli-tool...'"
build = "echo 'Building cli-tool executable...'"
package = "echo 'Packaging cli-tool for distribution...'"
lint = "echo 'Linting cli-tool...'"
