[project]
name = "demo-cli"
version = "0.1.0"
description = "CLI application for workspace demo"
requires-python = ">=3.8"
dependencies = [
    "demo-core",
    "demo-utils",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
demo-cli = "cli.main:cli"

[tool.uv.sources]
demo-core = { workspace = true }
demo-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
