[project]
name = "demo-web"
version = "0.1.0"
description = "Web application for workspace demo"
requires-python = ">=3.8"
dependencies = [
    "demo-core",
    "demo-utils",
    "flask>=2.0",
]

[project.scripts]
web-serve = "web.app:serve"
web-dev = "web.app:dev_server"

[tool.uv.sources]
demo-core = { workspace = true }
demo-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
